fix(contacts): fix alignment of Map and Form

--- a/nextend/components/Cards/locationCard.module.scss
+++ b/nextend/components/Cards/locationCard.module.scss
@@ -1,5 +1,6 @@
 // Phone
 .our_location {
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #f5f9fa; // TODO: color-name light-bg
@@ -50,7 +51,6 @@
 @media (min-width: 744px) {
   .our_location {
     width: 549px;
-    flex: 1;
     
     & > h2 {
       font-size: 32px;
@@ -63,8 +63,9 @@
 // Laptops media query
 @media (min-width: 992px) {
   .our_location {
-    width: 549px;
+    max-width: 549px;
   }
+
   .info__item {
     font-size: var(--text-regular);
 
