--- a/nextend/components/Forms/ui/styles.module.scss
+++ b/nextend/components/Forms/ui/styles.module.scss
@@ -61,7 +61,8 @@
 @media (min-width: 744px) {
   .label,
   .input__text,
-  .input__textarea {
+  .input__textarea,
+  .label__terms {
     width: 485px;
   }
 
